--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
         }
 
         .success-collapsible .collapsible-header {
-            background: #e8f5e8;
-            color: #2e7d32;
-            border-left: 4px solid #4CAF50;
+            background: #e3f2fd;
+            color: #1565c0;
+            border-left: 4px solid #2196F3;
         }
 
         .info-collapsible .collapsible-header {
@@ -258,9 +258,9 @@
         }
 
         .regulation-collapsible .collapsible-header {
-            background: #f3e5f5;
-            color: #7b1fa2;
-            border-left: 4px solid #9c27b0;
+            background: #e3f2fd;
+            color: #1565c0;
+            border-left: 4px solid #2196F3;
         }
 
         .collapsible-content {
@@ -822,7 +822,7 @@
                         POST Flight Data 與文件處理
                     </div>
                     <div class="phase-details">
-                        <div class="collapsible regulation-collapsible">
+                        <div class="collapsible decision-collapsible">
                             <div class="collapsible-header">
                                 📖 Master Flight Plan 討論建議
                                 <span class="toggle-icon">▶</span>
@@ -846,7 +846,7 @@
                             </div>
                         </div>
 
-                        <div class="collapsible info-collapsible">
+                        <div class="collapsible decision-collapsible">
                             <div class="collapsible-header">
                                 ℹ️ 其他文件處理方式
                                 <span class="toggle-icon">▶</span>
