--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Microsoft YaHei', sans-serif;
             margin: 0;
             padding: 20px;
-            background: linear-gradient(135deg, #4a90e2 0%, #357abd 100%);
+            background: linear-gradient(135deg, #5f666d 0%, #357abd 100%);
             min-height: 100vh;
         }
 
@@ -23,7 +23,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #2c5aa0 0%, #1e3a5f 100%);
+            background: linear-gradient(135deg, #7f9ecc 0%, #1e3a5f 100%);
             color: white;
             padding: 30px;
             text-align: center;
