--- a/index.html
+++ b/index.html
@@ -795,19 +795,14 @@
                                 <strong>功能：</strong>上傳"個人"飛行資料<br>
                                 <strong>查看：</strong>上傳後可由 Flight list -> submitted 看到送出的航班與時間<br>
                                 <strong>修改：</strong>如有需要更改，仍可進去航班內，修改後再次 Submit<br>
-                                <strong>後台設定：</strong>抓取 PIC 最新上傳的資料
+                                <strong>額外設定：</strong><br>
+                                (1)可設定於航班ETA+8hrs 後自動Submit 資料<br>
+                                (2)可設定航班ETA+7 days後自動刪除App內航班資料<br>
+                                <strong>飛行後平台設定：</strong>抓取 PIC 最新上傳的資料，並且設定只顯示 PIC 的Submit的文件
                             </div>
                         </div>
 
-                        <div class="collapsible info-collapsible">
-                            <div class="collapsible-header">
-                                ℹ️ 飛行後平台設定
-                                <span class="toggle-icon">▶</span>
-                            </div>
-                            <div class="collapsible-content">
-                                飛行後平台，可以設定只顯示 PIC 的文件
-                            </div>
-                        </div>
+
                     </div>
                 </div>
                 <div class="arrow"></div>
