--- a/index.html
+++ b/index.html
@@ -536,13 +536,14 @@
         <div class="timeline">
             <!-- Phase 1: FDP 報到 -->
             <div class="phase phase-1">
-                <div class="time-badge">FDP 報到</div>
+                <div class="time-badge">FDP 報到(ETD-2hrs)</div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">📱</div>
                         登入與航班確認
                     </div>
                     <div class="phase-details">
+                        <div class="detail-item">簽派於ETD-90mins 前送出飛行計畫至 mBriefing App</div>
                         <div class="detail-item">使用帳號密碼或 Face ID 登入 LIDO mBriefing APP <button class="image-btn" onclick="openImageModal('login.png')">圖</button></div>
                         <div class="detail-item">確認是否已有航班資訊（系統會依組員名單自動顯示）</div>
                         
@@ -602,7 +603,7 @@
 
             <!-- Phase 2: 進入駕駛艙 -->
             <div class="phase phase-2">
-                <div class="time-badge">進入駕駛艙</div>
+                <div class="time-badge">進入駕駛艙 (ETD-60mins)</div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">✈️</div>
@@ -679,7 +680,7 @@
 
             <!-- Phase 4: ACARS Accept -->
             <div class="phase phase-4">
-                <div class="time-badge">計畫確認</div>
+                <div class="time-badge">計畫 Acars Release (ETD-30mins) </div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">📋</div>
@@ -716,7 +717,7 @@
 
             <!-- Phase 5: GTB/ATB/特殊狀況 -->
             <div class="phase phase-5">
-                <div class="time-badge">特殊狀況處理</div>
+                <div class="time-badge">特殊狀況處理 (After P/B or Take Off ) </div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">🔄</div>
@@ -741,7 +742,7 @@
 
             <!-- Phase 6: 巡航中檢查 -->
             <div class="phase phase-6">
-                <div class="time-badge">巡航階段</div>
+                <div class="time-badge">巡航階段 (Cruising)</div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">🛫</div>
@@ -776,7 +777,7 @@
 
             <!-- Phase 7: 落地後處理 -->
             <div class="phase phase-7">
-                <div class="time-badge">落地後</div>
+                <div class="time-badge">落地後 ( After Landing )</div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">📤</div>
@@ -810,7 +811,7 @@
 
             <!-- Phase 8: 文件管理建議 -->
             <div class="phase phase-8">
-                <div class="time-badge">文件管理</div>
+                <div class="time-badge">文件管理 </div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">📁</div>
