--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                                 <span class="toggle-icon">▶</span>
                             </div>
                             <div class="collapsible-content">
-                                <strong>功能：</strong>App 內建同步功能，除 Scratchpad 外，其他資訊皆會同步<br>
+                                <strong>功能：</strong>App 內建同步功能，除 Scratchpad 、Additional Briefing Documents、Attach Document外，其他資訊皆會同步<br>
                                 <strong>需求：</strong>需開啟藍芽<br>
                                 <strong>限制：</strong>同時間，只能有一人開啟 Real Time Sync 房間，不能多人同時開啟<br>
                                 <strong>紀錄邏輯：</strong>依最新的時間判斷
