--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mBriefing 電子飛行計劃操作流程</title>
+    <title>電子飛行計劃操作流程</title>
     <style>
         body {
             font-family: 'Microsoft YaHei', sans-serif;
