--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
             </div>
             <!-- Phase 9: 飛行後平台網站範例 -->
             <div class="phase phase-9">
-                <div class="time-badge">飛行後平台</div>
+                <div class="time-badge">飛行後平台 (此網站僅供航務處手冊組參考)</div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">🌐</div>
