--- a/index.html
+++ b/index.html
@@ -838,20 +838,7 @@
                                 <span class="toggle-icon">▶</span>
                             </div>
                             <div class="collapsible-content">
-                                <strong>方案 1：</strong>截圖或拍照上傳，檔名：TOW（大小寫皆可） <button class="image-btn" onclick="openImageModal('tow.png')">圖</button><br>
-                            </div>
-                        </div>
-
-                        <div class="collapsible decision-collapsible">
-                            <div class="collapsible-header">
-                                ℹ️ 其他文件處理方式
-                                <span class="toggle-icon">▶</span>
-                            </div>
-                            <div class="collapsible-content">
-                                <strong>NOTOC：</strong>依據 FOM 6.2.4<button class="image-btn" onclick="openImageModal('tk7.png')">圖</button> 與 GOM 5.7.2 <button class="image-btn" onclick="openImageModal('tk4.png')">圖</button>，公司已在 Loading 與 CGO 留存文件副本，目前正在與POI討論組員簽名後，並於執勤結束後妥善丟棄NOTOC。<br> 另已簽名之NOTOC 將由地勤人員拍照或掃描上傳至 OPT 平台存檔已供備查。<br>
-                                <strong>LoadSheet：</strong>依據 FOM 4.9.5<button class="image-btn" onclick="openImageModal('tk5.png')">圖</button>，公司已透過 ACARS 電子簽章簽名<br>
-                                若為 manual 文件 → 可拍照上傳，檔名：LS（大小寫皆可）。<br>
-                                如影像模糊 → 以 Loading 保存之副本為主。
+                                截圖或拍照上傳，檔名：TOW（大小寫皆可） <button class="image-btn" onclick="openImageModal('tow.png')">圖</button><br>
                             </div>
                         </div>
 
@@ -860,10 +847,31 @@
                                 ⚠️ Operation Log 處理
                                 <span class="toggle-icon">▶</span>
                             </div>
-                            <div class="collapsible-content"><br>
+                            <div class="collapsible-content">
                                 • 原 ACARS 簽名後資料照相上傳，檔名：LOG（大小寫皆可）
                             </div>
                         </div>
+
+
+                        <div class="collapsible decision-collapsible">
+                            <div class="collapsible-header">
+                                ℹ️ 其他文件處理方式
+                                <span class="toggle-icon">▶</span>
+                            </div>
+                            <div class="collapsible-content">
+                                <strong>NOTOC：</strong>依據 FOM 6.2.4<button class="image-btn" onclick="openImageModal('tk7.png')">圖</button> 與 GOM 5.7.2 <button class="image-btn" onclick="openImageModal('tk4.png')">圖</button>，公司已在 Loading 與 CGO 留存文件副本，目前正在與POI討論組員簽名後，並於執勤結束後妥善丟棄NOTOC。<br> 另已簽名之NOTOC 將由地勤人員拍照或掃描上傳至 OPT 平台存檔已供備查。<br><br>
+
+                                <strong>LoadSheet：</strong>依據 FOM 4.9.5<button class="image-btn" onclick="openImageModal('tk5.png')">圖</button>，公司已透過 ACARS 電子簽章簽名<br>
+                                若為 manual 文件 → 可拍照上傳，檔名：LS（大小寫皆可）。<br>
+                                如影像模糊 → 以 Loading 保存之副本為主。
+
+                                <strong>FuelSheet：</strong>依據 Opspect<button class="image-btn" onclick="openImageModal('tkfuel.png')">圖</button>，公司根據規範不同場站電子油單或是紙本油單。<br>
+                                若為電子油單 → 組員不需於mBriefing做任何動作。<br>
+                                如為紙本油單 → 組員須拍照存檔至mBriefing ，檔名：FS (大小寫皆可)。 <br>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
