--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
 
                                 <strong>LoadSheet：</strong>依據 FOM 4.9.5<button class="image-btn" onclick="openImageModal('tk5.png')">圖</button>，公司已透過 ACARS 電子簽章簽名<br>
                                 若為 manual 文件 → 可拍照上傳，檔名：LS（大小寫皆可）。<br>
-                                如影像模糊 → 以 Loading 保存之副本為主。
+                                如影像模糊 → 以 Loading 保存之副本為主。<br><br>
 
                                 <strong>FuelSheet：</strong>依據 Opspect<button class="image-btn" onclick="openImageModal('tkfuel.png')">圖</button>，公司根據規範不同場站電子油單或是紙本油單。<br>
                                 若為電子油單 → 組員不需於mBriefing做任何動作。<br>
