修改錯字文法

--- a/index.html
+++ b/index.html
@@ -529,8 +529,6 @@
     <div class="container">
         <div class="header">
             <h1>✈️ LIDO mBriefing 電子飛行計劃操作流程</h1>
-            <p>由航機簽派部建議的標準作業程序 SOP</p>
-            <p>仍依各單位需求為主</p>
         </div>
 
         <div class="timeline">
@@ -592,7 +590,7 @@
                             </div>
                             <div class="collapsible-content">
                                 <strong>功能：</strong>確認已接受電子飛行計畫<br>
-                                <strong>Re-accept：</strong>如開啟後發現已被人接受，可點選右上角功能，Re-accept Flight 再次確認 <button class="image-btn" onclick="openImageModal('reaccept.png')">圖</button><br>
+                                <strong>Re-accept：</strong>如開啟後發現已被他人接受，可點選右上角Re-accept Flight功能，再次確認(如右圖) <button class="image-btn" onclick="openImageModal('reaccept.png')">圖</button><br>
                                 <strong>追蹤功能：</strong>後台可以追蹤是誰誤 Accept Flight
                             </div>
                         </div>
@@ -620,7 +618,7 @@
                             </div>
                             <div class="collapsible-content">
                                 <strong>功能：</strong>確認已接受電子飛行計畫<br>
-                                <strong>Re-accept：</strong>如開啟後發現已被人接受，可點選右上角功能，Re-accept Flight 再次確認<br>
+                                <strong>Re-accept：</strong>如開啟後發現已被他人接受，可點選右上角Re-accept Flight 功能，再次確認<br>
                                 <strong>追蹤功能：</strong>後台可以追蹤是誰誤 Accept Flight
                             </div>
                         </div>
