--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                                 <span class="toggle-icon">▶</span>
                             </div>
                             <div class="collapsible-content">
-                                由於目前LIDO系統設定限制 <strong>ETP information</strong>仍在請廠商修正，將修正與紙本計畫內容相同<button class="image-btn" onclick="openImageModal('etp.png')">圖</button>
+                                由於目前LIDO系統設定限制 <strong>ETP information</strong>仍請廠商修正中，將修正與紙本計畫內容相同<button class="image-btn" onclick="openImageModal('etp.png')">圖</button>
                             </div>
                         </div>
                     </div>
@@ -857,15 +857,15 @@
                                 <span class="toggle-icon">▶</span>
                             </div>
                             <div class="collapsible-content">
-                                <strong>NOTOC：</strong>依據 FOM 6.2.4<button class="image-btn" onclick="openImageModal('tk7.png')">圖</button> 與 GOM 5.7.2 <button class="image-btn" onclick="openImageModal('tk4.png')">圖</button>，公司已在 Loading 與 CGO 留存文件副本，目前正在與POI討論組員簽名後，並於執勤結束後妥善丟棄NOTOC。<br> 另已簽名之NOTOC 將由地勤人員拍照或掃描上傳至 OPT 平台存檔已供備查。<br><br>
+                                <strong>NOTOC：</strong>依據 FOM 6.2.4<button class="image-btn" onclick="openImageModal('tk7.png')">圖</button> 與 GOM 5.7.2 <button class="image-btn" onclick="openImageModal('tk4.png')">圖</button>，公司已在 Loading 與 CGO 留存文件副本，目前正在與POI討論組員簽名後，並於執勤結束後妥善丟棄NOTOC。<br> 另已簽名之NOTOC 將由地勤人員拍照或掃描上傳至 OPT 平台存檔，以供備查。<br><br>
 
                                 <strong>LoadSheet：</strong>依據 FOM 4.9.5<button class="image-btn" onclick="openImageModal('tk5.png')">圖</button>，公司已透過 ACARS 電子簽章簽名<br>
-                                若為 manual 文件 → 可拍照上傳，檔名：LS（大小寫皆可）。<br>
+                                若為 manual 文件 → 請拍照上傳，檔名：LS（大小寫皆可）。<br>
                                 如影像模糊 → 以 Loading 保存之副本為主。<br><br>
 
                                 <strong>FuelSheet：</strong>依據 Opspect<button class="image-btn" onclick="openImageModal('tkfuel.png')">圖</button>，公司根據規範不同場站電子油單或是紙本油單。<br>
                                 若為電子油單 → 組員不需於mBriefing做任何動作。<br>
-                                如為紙本油單 → 組員須拍照存檔至mBriefing ，檔名：FS (大小寫皆可)。 <br>
+                                如為紙本油單 → 組員須拍照存檔至 mBriefing，檔名：FS（大小寫皆可）。 <br>
                             </div>
                         </div>
 
