--- a/index.html
+++ b/index.html
@@ -868,7 +868,92 @@
                                 如為紙本油單 → 組員須拍照存檔至 mBriefing，檔名：FS（大小寫皆可）。 <br>
                             </div>
                         </div>
-
+ <!-- Phase 10: 機上紙本文件清冊 -->
+            <div class="phase phase-10">
+                <div class="time-badge"> 比對紙本與電子飛行計畫，主要文件差異。</div>
+                <div class="phase-content">
+                    <div class="phase-title">
+                        <div class="phase-icon">📋</div>
+                        機上紙本文件清冊
+                    </div>
+                    <div class="phase-details">
+                        <div class="detail-item">五階段電子化完成後，飛行後文件都無需紙本繳回，僅需拍照或截圖存入 mBriefing 後自行銷毀。</div>
+                        
+                        <table class="document-table">
+                            <thead>
+                                <tr>
+                                    <th style="width: 15%;">項目</th>
+                                    <th style="width: 18%;">現行做法</th>
+                                    <th style="width: 25%;">電子化後</th>
+                                    <th style="width: 12%;">簽署方式</th>
+                                    <th style="width: 30%;">備註</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><strong>FLIGHT DOCUMENTS CHECK LIST</strong></td>
+                                    <td>紙本</td>
+                                    <td>產出PDF保存於App</td>
+                                    <td>僅供組員核對，免簽署</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td><strong>OFP</strong></td>
+                                    <td>紙本</td>
+                                    <td>電子</td>
+                                    <td>ACARS</td>
+                                    <td>電子版本目前無直接顯示 statement/windshear/ ETP info (但以上內容仍可在 APP內部的 Class OFP 標籤頁中檢視)</td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="2"><strong>Fuel Sheet</strong></td>
+                                    <td>電子（視場站）</td>
+                                    <td>電子</td>
+                                    <td>iPad</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>紙本</td>
+                                    <td>維持紙本，拍照電子保存，紙本自行銷毀</td>
+                                    <td>實體簽名</td>
+                                    <td>檔名：FS(大小寫不限)</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Loadsheet</strong></td>
+                                    <td>電子</td>
+                                    <td>維持電子</td>
+                                    <td>ACARS</td>
+                                    <td>紙本檔案請組員自行銷毀</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>T/O Data</strong></td>
+                                    <td>紙本</td>
+                                    <td>翻拍Flysmart/OPT畫面保存於App，</td>
+                                    <td>免簽署</td>
+                                    <td>檔名：TAKEOFF(大小寫不限)</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>NOTOC</strong></td>
+                                    <td>紙本</td>
+                                    <td>維持紙本，拍照保存簽名頁，紙本自行銷毀</td>
+                                    <td>實體簽名</td>
+                                    <td>正本留存地服處/貨運處，聯管保留簽名電子檔<br>（從OTP平台上傳後保存於飛航後文件平台）</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>Operation Log</strong></td>
+                                    <td>紙本</td>
+                                    <td>維持紙本，拍照電子保存，紙本自行銷毀</td>
+                                    <td>實體簽名</td>
+                                    <td>各機型版面不同，改成ACARS簽署費用太高</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>En-route Chart</strong></td>
+                                    <td>紙本</td>
+                                    <td></td>
+                                    <td>免簽署</td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
 
                     </div>
                 </div>
