--- a/index.html
+++ b/index.html
@@ -523,6 +523,47 @@
             .image-btn { display: none !important; }
             .modal { display: none !important; }
         }
+
+
+                /* Phase 10 styles */
+        .phase-10 .phase-content { border-left-color: #607D8B; background: linear-gradient(135deg, #eceff1 0%, #ffffff 100%); }
+        .phase-10 .phase-icon { background: #607D8B; }
+
+        /* Document table styles */
+        .document-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+            font-size: 12px;
+        }
+
+        .document-table th {
+            background: linear-gradient(135deg, #607D8B 0%, #455A64 100%);
+            color: white;
+            padding: 12px 8px;
+            text-align: left;
+            font-weight: bold;
+            border: 1px solid #455A64;
+        }
+
+        .document-table td {
+            padding: 10px 8px;
+            border: 1px solid #CFD8DC;
+            vertical-align: top;
+            line-height: 1.5;
+        }
+
+        .document-table tr:nth-child(even) {
+            background-color: #ECEFF1;
+        }
+
+        .document-table tr:nth-child(odd) {
+            background-color: white;
+        }
+
+        .document-table tr:hover {
+            background-color: #E3F2FD;
+        }
     </style>
 </head>
 <body>
