--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
                         </div>
  <!-- Phase 10: 機上紙本文件清冊 -->
             <div class="phase phase-10">
-                <div class="time-badge"> 比對紙本與電子飛行計畫，主要文件差異。</div>
+                <div class="time-badge"> 紙本與電子飛行計畫，文件差異比較表。</div>
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">📋</div>
@@ -975,9 +975,9 @@
                                 <tr>
                                     <td><strong>NOTOC</strong></td>
                                     <td>紙本</td>
-                                    <td>維持紙本，拍照保存簽名頁，紙本自行銷毀</td>
+                                    <td>維持紙本，地勤拍照保存簽名頁，紙本自行銷毀</td>
                                     <td>實體簽名</td>
-                                    <td>正本留存地服處/貨運處，聯管保留簽名電子檔<br>（從OTP平台上傳後保存於飛航後文件平台）</td>
+                                    <td>正本留存地服處/貨運處，聯管保留簽名電子檔<br>（地勤拍照從OTP平台上傳後保存於飛航後文件平台）</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Operation Log</strong></td>
