--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>✈️ LIDO mBriefing 電子飛行計劃操作流程</h1>
+            <h1>✈️ 電子飛行計劃 (LIDO mBriefing) 操作流程</h1>
         </div>
 
         <div class="timeline">
