--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
                                 若為 manual 文件 → 請拍照上傳，檔名：LS（大小寫皆可）。<br>
                                 如影像模糊 → 以 Loading 保存之副本為主。<br><br>
 
-                                <strong>FuelSheet：</strong>依據 Opspect<button class="image-btn" onclick="openImageModal('tkfuel.png')">圖</button>，公司根據規範不同場站電子油單或是紙本油單。<br>
+                                <strong>FuelSheet：</strong>依據 OPSPECS<button class="image-btn" onclick="openImageModal('OPSPECS.jpg')">圖</button>，公司根據規範不同場站電子油單或是紙本油單。<br>
                                 若為電子油單 → 組員不需於mBriefing做任何動作。<br>
                                 如為紙本油單 → 組員須拍照存檔至 mBriefing，檔名：FS（大小寫皆可）。 <br>
                             </div>
