修正額外功能

--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                                 <strong>功能：</strong>上傳"個人"飛行資料<br>
                                 <strong>查看：</strong>上傳後可由 Flight list -> submitted 看到送出的航班與時間<br>
                                 <strong>修改：</strong>如有需要更改，仍可進去航班內，修改後再次 Submit<br>
-                                <strong>額外設定(待航務處反映後可以討論調整)：</strong><br>
+                                <strong>額外設定：</strong><br>
                                 (1)目前設定於航班ETA+8hrs 後自動Submit 資料(仍需開啟APP並連上網路)<br>
                                 (2)目前設定航班ETA+7 days後自動刪除App內航班資料<br>
                                 <strong>飛行後平台設定：</strong>抓取 PIC 最新上傳的資料，並且設定只顯示 PIC 的Submit的文件
