--- a/index.html
+++ b/index.html
@@ -868,8 +868,7 @@
                             </div>
                             <div class="collapsible-content">
                                 <strong>相關條文：</strong>FOM 4.8.2 <button class="image-btn" onclick="openImageModal('tk3.png')">圖</button><br>
-                                因電子飛行計畫可全部上傳至 Server，並具備 Real Time Sync 功能<br>
-                                <strong>簽派建議：</strong>所有組員皆可 Submit，後台僅保留 PIC（由 ACARS Accept 指定）的資料，以符合 Master 規範
+                                所有組員皆可 Submit，後台僅保留 PIC（由 ACARS Accept 指定）的資料，以符合 Master 規範
                             </div>
                         </div>
 
@@ -972,7 +971,7 @@
                                     <td>紙本</td>
                                     <td>組員翻拍Flysmart/OPT畫面保存於App，</td>
                                     <td>免簽署</td>
-                                    <td>檔名：TAKEOFF(大小寫不限)</td>
+                                    <td>檔名：TOW(大小寫不限)</td>
                                 </tr>
                                 <tr>
                                     <td><strong>NOTOC</strong></td>
