--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                                 <span class="toggle-icon">▶</span>
                             </div>
                             <div class="collapsible-content">
-                                <strong>NOTOC：</strong>依據 FOM 6.2.4<button class="image-btn" onclick="openImageModal('tk7.png')">圖</button> 與 GOM 5.7.2 <button class="image-btn" onclick="openImageModal('tk4.png')">圖</button>，公司已在 Loading 與 CGO 留存文件副本，目前正在與POI討論組員簽名後，並於執勤結束後妥善丟棄NOTOC。<br> 另已簽名之NOTOC 將由地勤人員拍照或掃描上傳至 OPT 平台存檔，以供備查。<br><br>
+                                <strong>NOTOC：</strong>依據 FOM 6.2.4<button class="image-btn" onclick="openImageModal('tk7.png')">圖</button> 與 GOM 5.7.2 <button class="image-btn" onclick="openImageModal('tk4.png')">圖</button>，但由於目前 ICAO 未發布電子NOTOC 相關規範，故仍保留紙本程序。<br><br>
 
                                 <strong>LoadSheet：</strong>依據 FOM 4.9.5<button class="image-btn" onclick="openImageModal('tk5.png')">圖</button>，公司已透過 ACARS 電子簽章簽名<br>
                                 若為 manual 文件 → 請拍照上傳，檔名：LS（大小寫皆可）。<br>
@@ -985,7 +985,7 @@
                                     <td>紙本</td>
                                     <td>維持紙本，組員拍照電子保存，紙本自行銷毀</td>
                                     <td>實體簽名</td>
-                                    <td></td>
+                                    <td>檔名：LOG（大小寫皆可）</td>
                                 </tr>
                                 <tr>
                                     <td><strong>En-route Chart</strong></td>
