--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
                                     <td>紙本</td>
                                     <td>維持紙本</td>
                                     <td>實體簽名</td>
-                                    <td>與貨運處、地服處協商中</td>
+                                    <td>ICAO 尚未發布電子程序</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Operation Log</strong></td>
