--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>電子飛行計劃操作流程</title>
+    <title>電子飛行計畫操作流程</title>
     <style>
         body {
             font-family: 'Microsoft YaHei', sans-serif;
@@ -569,7 +569,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>✈️ LIDO mBriefing 電子飛行計劃操作流程</h1>
+            <h1>✈️ Lido mBriefing 電子飛行計畫操作流程</h1>
         </div>
 
         <div class="timeline">
@@ -582,8 +582,8 @@
                         登入與航班確認
                     </div>
                     <div class="phase-details">
-                        <div class="detail-item">簽派於ETD-90mins 前送出飛行計畫至 mBriefing App</div>
-                        <div class="detail-item">使用帳號密碼或 Face ID 登入 LIDO mBriefing APP <button class="image-btn" onclick="openImageModal('login.png')">圖</button></div>
+                        <div class="detail-item">簽派於ETD-90mins 前送出飛行計畫至 Lido mBriefing</div>
+                        <div class="detail-item">使用帳號密碼或 Face ID 登入 Lido mBriefing <button class="image-btn" onclick="openImageModal('login.png')">圖</button></div>
                         <div class="detail-item">確認是否已有航班資訊（系統會依組員名單自動顯示）</div>
                         
                         <div class="collapsible decision-collapsible">
@@ -701,7 +701,7 @@
                                 <span class="toggle-icon">▶</span>
                             </div>
                             <div class="collapsible-content">
-                                <strong>功能：</strong>App 內建同步功能，除 Scratchpad 、Additional Briefing Documents、Attach Document外，其他資訊皆會同步<br>
+                                <strong>功能：</strong>Lido mBriefing 內建同步功能，除 Scratchpad 、Additional Briefing Documents、Attach Document外，其他資訊皆會同步<br>
                                 <strong>需求：</strong>需開啟藍芽<br>
                                 <strong>限制：</strong>同時間，只能有一人開啟 Real Time Sync 房間，不能多人同時開啟<br>
                                 <strong>紀錄邏輯：</strong>依最新的時間判斷
@@ -790,7 +790,7 @@
                 <div class="phase-content">
                     <div class="phase-title">
                         <div class="phase-icon">🛫</div>
-                        巡航中 LIDO mBriefing App 異常
+                        巡航中 Lido mBriefing 異常
                     </div>
                     <div class="phase-details">
                         <div class="detail-item">須再確認全員是否於同一 Sync 房間 <button class="image-btn" onclick="openImageModal('sync time.png')">圖</button></div>
@@ -807,11 +807,11 @@
 
                         <div class="collapsible error-collapsible">
                             <div class="collapsible-header">
-                                ❌ App 異常處理
+                                ❌ Lido mBriefing 異常處理
                                 <span class="toggle-icon">▶</span>
                             </div>
                             <div class="collapsible-content">
-                                若 App 發生異常 → 透過 ACARS 由簽派部傳送飛行計畫
+                                若 Lido mBriefing 發生異常 → 透過 ACARS 由簽派部傳送飛行計畫
                             </div>
                         </div>
                     </div>
@@ -906,8 +906,8 @@
                                 如影像模糊 → 以 Loading 保存之副本為主。<br><br>
 
                                 <strong>FuelSheet：</strong>依據 OPSPECS<button class="image-btn" onclick="openImageModal('OPSPECS.jpg')">圖</button>，公司根據規範不同場站電子油單或是紙本油單。<br>
-                                若為電子油單 → 組員不需於mBriefing做任何動作。<br>
-                                如為紙本油單 → 組員須拍照存檔至 mBriefing，檔名：FS（大小寫皆可）。 <br>
+                                若為電子油單 → 組員不需於Lido mBriefing做任何動作。<br>
+                                如為紙本油單 → 組員須拍照存檔至 Lido mBriefing，檔名：FS（大小寫皆可）。 <br>
                             </div>
                         </div>
  <!-- Phase 10: 機上紙本文件清冊 -->
@@ -934,7 +934,7 @@
                                 <tr>
                                     <td><strong>FLIGHT DOCUMENTS CHECK LIST</strong></td>
                                     <td>紙本</td>
-                                    <td>產出PDF保存於App</td>
+                                    <td>產出PDF保存於Lido mBriefing</td>
                                     <td>僅供組員核對，免簽署</td>
                                     <td></td>
                                 </tr>
@@ -943,7 +943,7 @@
                                     <td>紙本</td>
                                     <td>電子</td>
                                     <td>ACARS</td>
-                                    <td>電子版本目前無直接顯示 statement/windshear/ ETP info (但以上內容仍可在 APP內部的 Class OFP 標籤頁中檢視)</td>
+                                    <td>電子版本目前無直接顯示 statement/windshear/ ETP info (但以上內容仍可在 APP內部的 Classic OFP 標籤頁中檢視)</td>
                                 </tr>
                                 <tr>
                                     <td rowspan="2"><strong>Fuel Sheet</strong></td>
@@ -956,7 +956,7 @@
                                     <td>紙本</td>
                                     <td>維持紙本，組員拍照電子保存，紙本自行銷毀</td>
                                     <td>實體簽名</td>
-                                    <td>檔名：FS(大小寫不限)</td>
+                                    <td>檔名：FS(大小寫皆可)</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Loadsheet</strong></td>
@@ -970,7 +970,7 @@
                                     <td>紙本</td>
                                     <td>組員翻拍Flysmart/OPT畫面保存於App，</td>
                                     <td>免簽署</td>
-                                    <td>檔名：TOW(大小寫不限)</td>
+                                    <td>檔名：TOW(大小寫皆可)</td>
                                 </tr>
                                 <tr>
                                     <td><strong>NOTOC</strong></td>
