--- a/index.html
+++ b/index.html
@@ -840,8 +840,8 @@
                                 <strong>查看：</strong>上傳後可由 Flight list -> submitted 看到送出的航班與時間<br>
                                 <strong>修改：</strong>如有需要更改，仍可進去航班內，修改後再次 Submit<br>
                                 <strong>額外設定：</strong><br>
-                                (1)目前設定於航班ETA+8hrs 後自動Submit 資料(仍需開啟APP並連上網路)<br>
-                                (2)目前設定航班ETA+7 days後自動刪除App內航班資料<br>
+                                (1)目前設定於航班ETA+8hrs 後自動Submit 資料(仍需開啟Lido mBriefing並連上網路)<br>
+                                (2)目前設定航班ETA+7 days後自動刪除Lido mBriefing內航班資料<br>
                                 <strong>飛行後平台設定：</strong>抓取 PIC 最新上傳的資料，並且設定只顯示 PIC 的Submit的文件
                             </div>
                         </div>
@@ -934,7 +934,7 @@
                                 <tr>
                                     <td><strong>FLIGHT DOCUMENTS CHECK LIST</strong></td>
                                     <td>紙本</td>
-                                    <td>產出PDF保存於Lido mBriefing</td>
+                                    <td>系統產出PDF保存於Lido mBriefing</td>
                                     <td>僅供組員核對，免簽署</td>
                                     <td></td>
                                 </tr>
@@ -943,7 +943,7 @@
                                     <td>紙本</td>
                                     <td>電子</td>
                                     <td>ACARS</td>
-                                    <td>電子版本目前無直接顯示 statement/windshear/ ETP info (但以上內容仍可在 APP內部的 Classic OFP 標籤頁中檢視)</td>
+                                    <td>電子版本目前無直接顯示 statement/windshear/ ETP info (但以上內容仍可在Lido mBriefing內部的 Classic OFP 標籤頁中檢視)</td>
                                 </tr>
                                 <tr>
                                     <td rowspan="2"><strong>Fuel Sheet</strong></td>
@@ -968,7 +968,7 @@
                                 <tr>
                                     <td><strong>T/O Data</strong></td>
                                     <td>紙本</td>
-                                    <td>組員翻拍Flysmart/OPT畫面保存於App，</td>
+                                    <td>組員翻拍或截圖 Flysmart/OPT畫面保存於Lido mBriefing</td>
                                     <td>免簽署</td>
                                     <td>檔名：TOW(大小寫皆可)</td>
                                 </tr>
