--- a/index.html
+++ b/index.html
@@ -946,8 +946,8 @@
                                     <td>電子版本目前無直接顯示 statement/windshear/ ETP info (但以上內容仍可在Lido mBriefing內部的 Classic OFP 標籤頁中檢視)</td>
                                 </tr>
                                 <tr>
-                                    <td rowspan="2"><strong>Fuel Sheet</strong></td>
-                                    <td>電子（視場站）</td>
+                                    <td rowspan="2"><strong>Fuel Sheet（視場站）</strong></td>
+                                    <td>電子</td>
                                     <td>電子</td>
                                     <td>iPad</td>
                                     <td></td>
