--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                             </div>
                             <div class="collapsible-content">
                                 <strong>功能：</strong> 點選下方 Briefing，再開啟左上角工具列選擇 Fuel。
-  在Block Fuel中輸入所需總油，在Extra Feul中選擇加油原因，亦可以變更時間及額外油量。資料會自動連動至 L/S、Fuel Sheet，並可透過 ACARS 發送訊息給 OD/MM/LD <button class="image-btn" onclick="openImageModal('fuel.png')">圖</button>
+  在Block Fuel中輸入所需總油，在Extra Fuel中選擇加油原因，亦可以變更時間及額外油量。資料會自動連動至 L/S、Fuel Sheet，並可透過 ACARS 發送訊息給 OD/MM/LD <button class="image-btn" onclick="openImageModal('fuel.png')">圖</button>
                             </div>
                         </div>
 
@@ -702,7 +702,7 @@
                             </div>
                             <div class="collapsible-content">
                                 <strong>功能：</strong>Lido mBriefing 內建同步功能，除 Scratchpad 、Additional Briefing Documents、Attach Document外，其他資訊皆會同步<br>
-                                <strong>需求：</strong>需開啟藍芽<br>
+                                <strong>需求：</strong>需開啟藍牙<br>
                                 <strong>限制：</strong>同時間，只能有一人開啟 Real Time Sync 房間，不能多人同時開啟<br>
                                 <strong>紀錄邏輯：</strong>依最新的時間判斷
                             </div>
