--- a/index.html
+++ b/index.html
@@ -934,8 +934,8 @@
                                 <tr>
                                     <td><strong>FLIGHT DOCUMENTS CHECK LIST</strong></td>
                                     <td>紙本</td>
-                                    <td>系統產出PDF保存於Lido mBriefing</td>
-                                    <td>僅供組員核對，免簽署</td>
+                                    <td>產出PDF保存於App (是否維持現行做法待議)</td>
+                                    <td>免簽署</td>
                                     <td></td>
                                 </tr>
                                 <tr>
@@ -943,7 +943,9 @@
                                     <td>紙本</td>
                                     <td>電子</td>
                                     <td>ACARS</td>
-                                    <td>電子版本目前無直接顯示 statement/windshear/ ETP info (但以上內容仍可在Lido mBriefing內部的 Classic OFP 標籤頁中檢視)</td>
+                                    <td>	無confirmation statement / maximum windshear rate / ETP info
+	<br>電子化後，紙本將作為備用
+</td>
                                 </tr>
                                 <tr>
                                     <td rowspan="2"><strong>Fuel Sheet（視場站）</strong></td>
@@ -954,35 +956,37 @@
                                 </tr>
                                 <tr>
                                     <td>紙本</td>
-                                    <td>維持紙本，組員拍照電子保存，紙本自行銷毀</td>
+                                    <td>維持紙本簽名，拍照電子保存</td>
                                     <td>實體簽名</td>
                                     <td>檔名：FS(大小寫皆可)</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Loadsheet</strong></td>
                                     <td>電子</td>
-                                    <td>維持電子</td>
+                                    <td>電子</td>
                                     <td>ACARS</td>
-                                    <td>紙本檔案請組員自行銷毀</td>
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <td><strong>T/O Data</strong></td>
                                     <td>紙本</td>
-                                    <td>組員翻拍或截圖 Flysmart/OPT畫面保存於Lido mBriefing</td>
+                                    <td>翻拍Flysmart/OPT畫面保存於App</td>
                                     <td>免簽署</td>
                                     <td>檔名：TOW(大小寫皆可)</td>
                                 </tr>
                                 <tr>
                                     <td><strong>NOTOC</strong></td>
                                     <td>紙本</td>
-                                    <td>維持紙本</td>
+                                    <td>維持紙本簽名</td>
                                     <td>實體簽名</td>
-                                    <td>ICAO 尚未發布電子程序</td>
+                                    <td>紙本正本留存地服處/貨運處，聯管保留簽名電子檔<br>
+(從OTP平台上傳後保存於飛航後文件平台)
+</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Operation Log</strong></td>
                                     <td>紙本</td>
-                                    <td>維持紙本，組員拍照電子保存，紙本自行銷毀</td>
+                                    <td>維持紙本簽名，拍照電子保存</td>
                                     <td>實體簽名</td>
                                     <td>檔名：LOG（大小寫皆可）</td>
                                 </tr>
